6 March 2005 Sylvain Pion
- Mark template ctor of Quotient<NT> explicit, as it is too greedy,
  complement it by constructors from NT, int and double.

5 March 2005 Sylvain Pion
- Use <boost/operators.hpp> to simplify <CGAL/Quotient.h>.
- Add test program for the mixed operators of Quotient.

3 March 2005 Sylvain Pion
- long_double.h : SunPRO workaround.

8 February 2005 Sylvain Pion
- doc fix for Rational_traits<>.

6 February 2005 Sylvain Pion
- Add Number_type_checker<NT1, NT2, Comparator>.

1 February 2005 Sylvain Pion
- Fix fall out of long double support.
- Re-implement nearbyint() because of too painful portability issues.

29 January 2005 Sylvain Pion
- Make "long double" a model of number type.
- Add MP_Float constructors from float and long double.

=========================== CGAL 3.1 ============================

24 November 2004 Sylvain Pion
- Remove useless (and potentially misleading) reference to the obsolete
  BigNum package (by Serpette, Vuillemin, Herve).

17 November 2004 Sylvain Pion
- Disable square(MP_Float) [minor] optimization until the bug is fixed.

30 September 2004 Sylvain Pion
- MP_Float : fix bug in constructor from double.
- MP_Float : add convertion function to rational types (e.g. Gmpq).

22 September 2004 Sylvain Pion
- Define CGAL::min/max() for Quotient, since LEDA defines template min/max
  functions that clash with std::min/max through ADL.

15 September 2004 Sylvain Pion
- Add sqrt() for leda_integer and leda_bigfloat.

10 September 2004 Andreas Fabri
- yet another change in operator>>(iostrem&, Gmpz) as it still failed with VC7.1

6 September 2004 Menelaos Karavelas
- number_type_basic.h: added "#include<CGAL/_QP_solver/Double.h>"

5 September 2004 Menelaos Karavelas & Sylvain Pion
- added specs for the new number type tags: Has_exact_ring_operations,
  Has_exact_division, Has_exact_sqrt

5 September 2004 Menelaos Karavelas
- number_type_basic.h: put declarations for GMP, GMPXX and CORE inside